# concat-vc

./: .gitignore  .prettierrc  .tool-versions  Cargo.toml  README.md  package.json  pdm.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
client/: index.html  package.json  vite.config.ts
client/src/: app.tsx  main.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
engine/: attempt01.py  attempt02.py  attempt03.py  dataset_feats.py  hello.py  preparation.py
engine/fragment_vc/: README.md  model.py  utils.py
engine/hifi_gan/: README.md  env.py  inference.py  inference_e2e.py  meldataset.py  models.py  train.py  utils.py
engine/lib/: dataset_jvs.py  extract.py  grad_rev.py  utils.py  utils_ui.py  vocoder.py
